<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Screen Mirroring</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Videos</string>
    <string name="tab_text_3">Images</string>
    <string name="quick_and_convenient_screen_sharing">Quick and convenient screen sharing</string>
    <string name="video_and_photo">Video and photo</string>
    <string name="media">Media</string>
    <string name="mirror_screen_to_tv">Mirror screen to TV</string>
    <string name="web">Web</string>
    <string name="web_browser">Web browser</string>
    <string name="guide">Guide</string>
    <string name="how_to_connect">How to connect?</string>
    <string name="document">Document</string>
    <string name="read_file">Read file</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_media">Media</string>
    <string name="setting">Setting</string>
    <string name="wifi_connected">Đã kết nối WiFi</string>
    <string name="title_activity_document">Document</string>
    <string name="word">Word</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="select_type_you_want_to_show">Select type you want \nto show.</string>
    <string name="slide">Slide</string>
    <string name="txt">TXT</string>
    <string name="tutorial">Guide</string>
    <string name="your_device_is_not_supported_for_screen_mirroring_please_try_on_other_device">Your device is not supported for screen mirroring. Please try on other device.</string>
    <string name="ok">OK</string>
    <string name="oops">Oops!</string>
    <string name="do_you_want_to_delete_all_nbrowser_history">Do you want to delete all?\nbrowser history?</string>
    <string name="delete_history">Delete History</string>
    <string name="back">Back</string>
    <string name="hint_search">Search…</string>
    <string name="adFiltersLastUpdated">adFiltersLasUpdated</string>
    <string-array name="blocked_sites">
        <item>youtube.com</item>
        <item>00000nwebcamnow.com</item>
        <item>0000114.com</item>
        <item>0001casino.com</item>
        <item>0005.us</item>
        <item>000babes.com</item>
        <item>000dvd.com</item>
        <item>000freehosting.com</item>
        <item>000go.com</item>
        <item>000porn.com</item>
        <item>000pussy69pornxxxporno.com</item>
        <item>000relationships.com</item>
        <item> 000-sex.com</item>
        <item>000sexe.com</item>
        <item>000webhostapp.com</item>
        <item> 00101001.com</item>
        <item>0011cartoons.com</item>
        <item> 001-adult-toys-n-sex-dolls.com</item>
        <item> 001am.com</item>
        <item>001londonescorts.com</item>
        <item> 001porno.com</item>
        <item>001xx.com</item>
        <item>001xxx.com</item>
        <item>00–44.com</item>
        <item>003689.com</item>
    </string-array>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="intersititial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="vibrateON" tools:ignore="ExtraTranslation">vibrateOn</string>
    <string name="soundON" tools:ignore="ExtraTranslation">soundOn</string>
    <string name="adBlockON" tools:ignore="ExtraTranslation">adBlockOn</string>
    <string name="policyAccept" tools:ignore="ExtraTranslation">policyAccept</string>
    <string name="shortcut">Shortcut</string>
    <string name="edit"><u>Edit</u></string>
    <string name="add_more">Add</string>
    <string name="placeholder_url">https://www.google.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_tab_welcome">new tab welcome</string>
    <string name="start">Start</string>
    <string name="no_picture_mode">no image mode</string>
    <string name="history">History</string>
    <string name="settings">settings</string>
    <string name="quit">quit</string>
    <string name="search_or_type_url">search or type url</string>
    <string name="warn_invalid_url">warn invalid url</string>
    <string name="placeholder_todo">todo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go">Go</string>
    <string name="add_shortcut">Add Shortcut</string>
    <string name="name">Name</string>
    <string name="https">https://</string>
    <string name="url">Url</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="save">save</string>
    <string name="all">All documents</string>
    <string name="preference_file_key">documents key</string>
    <string name="txt_facebook">Facebook</string>
    <string name="invalid_url">invalid url</string>
    <string name="search_engine_google">Google</string>
    <string name="suggestion">suggestion</string>
    <string name="search_engine_ask" translatable="false">Ask</string>
    <string name="search_engine_bing" translatable="false">Bing</string>
    <string name="search_engine_yahoo" translatable="false">Yahoo</string>
    <string name="search_engine_startpage" translatable="false">StartPage</string>
    <string name="search_engine_startpage_mobile" translatable="false">StartPage Mobile</string>
    <string name="search_engine_duckduckgo" translatable="false">DuckDuckGo</string>
    <string name="search_engine_duckduckgo_lite" translatable="false">DuckDuckGo Lite</string>
    <string name="search_engine_baidu" translatable="false">Baidu</string>
    <string name="search_engine_yandex" translatable="false">Yandex</string>
    <string name="search_engine_naver" translatable="false">Naver</string>
    <string name="search_engine_custom" translatable="false">Custom URL</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_video" translatable="false">Video</string>
    <string name="full_after_splash" translatable="false">InterstitialAd id</string>
    <string name="free" translatable="false">Free</string>
    <string name="txt_fast_smart" translatable="false"><![CDATA[Fast & Smart]]></string>
    <string name="txt_instagram" translatable="false">Instagram</string>
    <string name="txt_imdb" translatable="false">IMDb</string>
    <string name="txt_buzz_video" translatable="false">Buzz video</string>
    <string name="txt_vlive" translatable="false">Vlive</string>
    <string name="txt_dailymotion" translatable="false">Dailymotion</string>
    <string name="txt_linked_in" translatable="false">LinkedIn</string>
    <string name="txt_vimeo" translatable="false">Vimeo</string>
    <string name="txt_twitter" translatable="false">Twitter</string>
    <string name="txt_tiktok" translatable="false">Tiktok</string>
    <string name="path_link_copy" translatable="false">Link: %s</string>
    <string name="block_ads" translatable="false">Block ADS</string>
    <string name="txt_long_test" translatable="false">/storage/emulated/0/Download/DownloadVideo2022Pro/</string>
    <string name="txt_downloader" translatable="false">Downloader</string>
    <string name="txt_language_options" translatable="false">Language options</string>
    <string name="channel_name" translatable="false">high_downloader</string>
    <string name="text_open_and" translatable="false">Open %s</string>
    <string name="pip_not_support" translatable="false">Picture in picture mode is not supported in this device</string>
    <string name="pip_mode_error" translatable="false">Picture in picture mode error</string>
    <string-array name="proxy_choices_array" translatable="false">
        <item>None</item>
        <item>Orbot</item>
        <item>I2P</item>
        <item>Manual</item>
    </string-array>
    <string name="share_video">Share video</string>
    <string name="share_link">Share link</string>
    <string name="browser_search_hint">Search or Type URL</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_video_title">Video found:</string>
    <string name="delete">Delete</string>
    <string name="hint_paste_link">Paste the link here</string>
    <string name="text_submit">Submit</string>
    <string name="txt_some_thing">Something wrong!</string>
    <string name="txt_downloading">Downloading</string>
    <string name="txt_error_occ">Download error</string>
    <string name="enter_valid">Please Enter a valid URL</string>
    <string name="txt_download">Download</string>
    <string name="txt_pressagain">Please press again to exit</string>
    <string name="txt_genarating_download_link">Generating download links</string>
    <string name="txt_hdlink">HD link</string>
    <string name="txt_sdlink">SD link</string>
    <string name="select_quality">Select Quality</string>
    <string name="txt_duration">Duration</string>
    <string name="resolution">Resolution</string>
    <string name="filesize">File size</string>
    <string name="txt_source">Source</string>
    <string name="title_back">Back</string>
    <string name="title_next">Next</string>
    <string name="title_folder">Folder</string>
    <string name="title_tabs">Tabs</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_feedback_desc">Tell us the problem you met with</string>
    <string name="txt_type">Type</string>
    <string name="txt_cant_browse">Can\'t browse videos</string>
    <string name="txt_no_download">No download resources detected</string>
    <string name="txt_too_many_ads">Too many ads</string>
    <string name="txt_please_the_website">Please enter the website</string>
    <string name="txt_please_choose_feedback">Please choose the problem type</string>
    <string name="txt_ok">OK</string>
    <string name="txt_help">Help</string>
    <string name="txt_privacy">Privacy policy</string>
    <string name="txt_version">Version %s</string>
    <string name="text_more_setting">More Settings</string>
    <string name="txt_search_engine">Search engine</string>
    <string name="txt_save_your_password">Save your passwords</string>
    <string name="txt_recommended">Recommended</string>
    <string name="txt_turn_on">On</string>
    <string name="txt_sync_to_gallery">Sync to gallery</string>
    <string name="txt_block_ads">Block ads</string>
    <string name="txt_clear_cookies">Clear cookies</string>
    <string name="txt_clear_browser_history">Clear browsing history</string>
    <string name="txt_clear_cache">Clear cache</string>
    <string name="text_select_path_download">Select the download path</string>
    <string name="text_settings">Settings</string>
    <string name="txt_remove_ads">Remove ads</string>
    <string name="txt_download_location">Download location</string>
    <string name="txt_download_with_wifi">Download via Wi-Fi Only</string>
    <string name="txt_how_to_use">How to use</string>
    <string name="txt_root">Root</string>
    <string name="txt_menu_new_tab">New tab</string>
    <string name="txt_menu_share">Share</string>
    <string name="txt_menu_history">History</string>
    <string name="txt_menu_copy_link">Copy link</string>
    <string name="txt_menu_bookmarks">Bookmarks</string>
    <string name="txt_menu_add_bookmark">Add bookmark</string>
    <string name="txt_menu_share_with_friends">Share with friends</string>
    <string name="txt_menu_setting">Setting</string>
    <string name="txt_menu_desktop_site">Desktop interface</string>
    <string name="txt_menu_ads">Ads</string>
    <string name="txt_title">Title</string>
    <string name="folder">Folder</string>
    <string name="txt_url">URL</string>
    <string name="notify_download_today">Download your favourite videos</string>
    <string name="txt_lets_go">Open</string>
</resources>