<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_filter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_16sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/select_type_you_want_to_show"
            android:textColor="#000"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14">

            <RadioButton
                android:id="@+id/rd_all"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_8sdp"
                android:buttonTint="@color/blue"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/all" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <RadioButton
                android:id="@+id/rd_word"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_8sdp"
                android:buttonTint="@color/blue"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/word" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <RadioButton
                android:id="@+id/rd_pdf"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/pdf" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <RadioButton
                android:id="@+id/rd_excel"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/excel" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <RadioButton
                android:id="@+id/rd_pptx"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_8sdp"
                android:buttonTint="@color/blue"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/slide" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <RadioButton
                android:id="@+id/rd_txt"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/txt" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>