<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    >

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/layout_tool_bar" />

    <TextView
        android:id="@+id/tvRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2"
        android:background="#E7e7e7"
        android:text="@string/txt_root"
        android:textSize="13dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

    <TextView
        android:id="@+id/tvClearCookies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="16dp"
        android:text="@string/txt_clear_cookies"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRoot" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        app:layout_constraintTop_toBottomOf="@id/tvClearCookies"
        android:background="@color/gray_m3"/>

    <TextView
        android:id="@+id/tvClearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="32dp"
        android:text="@string/txt_clear_browser_history"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClearCookies" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        app:layout_constraintTop_toBottomOf="@id/tvClearHistory"
        android:background="@color/gray_m3"/>

    <TextView
        android:id="@+id/tvClearCache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="32dp"
        android:text="@string/txt_clear_cache"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClearHistory" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_m3"
        app:layout_constraintBottom_toTopOf="@+id/btCancel" />

    <TextView
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/txt_cancel"
        android:textAllCaps="true"
        android:textColor="@color/blue_m11"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btOk"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/txt_ok"
        android:textAllCaps="true"
        android:textColor="@color/blue_m11"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btCancel" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray_m3"
        app:layout_constraintBottom_toBottomOf="@id/btCancel"
        app:layout_constraintEnd_toEndOf="@id/btCancel"
        app:layout_constraintTop_toTopOf="@id/btCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
