<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_downloader_logo_128" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/txt_downloader"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/notify_download_today"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDrinkNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_rect_gradient_blue"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/txt_lets_go"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>
