<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/layout_tool_bar" />

    <TextView
        android:id="@+id/tvRemoveADS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_remove_ads"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/padding_1p5"
        android:text="@string/txt_remove_ads"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

    <TextView
        android:id="@+id/tvDownloadLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_2"
        android:paddingTop="@dimen/padding_2"
        android:text="@string/txt_download_location"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemoveADS" />

    <TextView
        android:id="@+id/tvPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2"
        android:layout_marginBottom="@dimen/margin_1p5"
        android:text="@string/txt_long_test"
        android:textColor="@color/gray_m3"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDownloadLocation" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:background="@color/gray_m3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPath" />

    <TextView
        android:id="@+id/tvDownloadWifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_btn_setting"
        android:padding="@dimen/padding_2"
        android:text="@string/txt_download_with_wifi"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_2"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDownloadWifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDownloadWifi" />

    <View
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="#DDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDownloadWifi" />

    <TextView
        android:id="@+id/tvMoreSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3"
        android:background="@drawable/ripple_btn_setting"
        android:padding="@dimen/padding_2"
        android:text="@string/text_more_setting"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDownloadWifi" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:background="@color/gray_m3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMoreSetting" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_btn_setting"
        android:padding="@dimen/padding_2"
        android:text="@string/txt_help"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMoreSetting" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:background="@color/gray_m3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHelp" />


    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/my_template"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:gnt_template_type="@layout/gnt_small_template_view_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
